[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_ui"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_ui")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = -20.0

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Score: 0"

[node name="DeliveriesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Deliveries: 0"

[node name="ComboLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Combo: 0x"

[node name="ClientsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Active Clients: 0"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Status: Looking for clients"